--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@hypernym/nuxt-gsap": "^2.4.3",
     "lenis": "^1.1.20",
     "nuxt": "^3.15.4",
     "vue": "latest",
