--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@hypernym/nuxt-gsap": "^2.4.3",
+    "@vueuse/core": "^12.5.0",
+    "@vueuse/nuxt": "^12.5.0",
     "lenis": "^1.1.20",
     "nuxt": "^3.15.4",
     "vue": "latest",
