--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hypernym/nuxt-gsap": "^2.4.3",
+    "@nuxtjs/seo": "^2.1.1",
     "@vueuse/core": "^12.5.0",
     "@vueuse/nuxt": "^12.5.0",
     "lenis": "^1.1.20",
