--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vueuse/nuxt": "^12.5.0",
     "lenis": "^1.1.20",
     "nuxt": "^3.15.4",
+    "ukiyojs": "^4.2.0",
     "vue": "latest",
     "vue-router": "latest"
   },
